<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">매장관리앱</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <!-- Navigation Drawer icon codes -->
    <string name="drawer_icon_splash_screens">&#xe82c;</string>
    <string name="drawer_icon_progress_bars">&#xe84c;</string>
    <string name="drawer_icon_buttons">&#xe802;</string>
    <string name="drawer_icon_shape_image_views">&#xe82b;</string>
    <string name="drawer_icon_text_views">&#xe852;</string>
    <string name="drawer_icon_search_bars">&#xe84f;</string>
    <string name="drawer_icon_login_page">&#xe842;</string>
    <string name="drawer_icon_audio_player">&#xe807;</string>
    <string name="drawer_icon_video_player">&#xe808;</string>
    <string name="drawer_icon_image_gallery">&#xe83c;</string>
    <string name="drawer_icon_check_and_radio_buttons">&#xe833;</string>
    <string name="drawer_icon_calendars">&#xe811;</string>
    <string name="drawer_icon_left_menus">&#xe83f;</string>
    <string name="drawer_icon_list_views">&#xe841;</string>
    <string name="drawer_icon_parallax">&#xe846;</string>
    <string name="drawer_icon_dialogs">&#xe803;</string>
    
    <string name="drawer_icon_linked_in">&#xe80e;</string>
    <string name="drawer_icon_blog">&#xe81e;</string>
    <string name="drawer_icon_git_hub">&#xe808;</string>
    <string name="drawer_icon_instagram">&#xe80c;</string>
    
    <!-- Navigation Drawer icon titles -->
    <string name="drawer_title_splash_screens">Splash Screens</string>
    <string name="drawer_title_progress_bars">Progress Bars</string>
    <string name="drawer_title_buttons">Buttons</string>
    <string name="drawer_title_shape_image_views">Shape Image Views</string>
    <string name="drawer_title_text_views">Text Views</string>
    <string name="drawer_title_search_bars">Search Bars</string>
    <string name="drawer_title_login_page">Login Pages</string>
     <string name="drawer_title_audio_player">Audio Player</string>
     <string name="drawer_title_video_player">Video Player</string>
    <string name="drawer_title_image_gallery">Image Gallery</string>
    <string name="drawer_title_check_and_radio_buttons">Check Boxes</string>
     <string name="drawer_title_calendars">Calendars</string>
    <string name="drawer_title_left_menus">Left Menus</string>
    <string name="drawer_title_list_views">List Views</string>
    <string name="drawer_title_parallax">Parallax</string>
     <string name="drawer_title_dialogs">Dialogs</string>
    
    <string name="drawer_title_linked_in">LinkedIn</string>
    <string name="drawer_title_blog">Blog</string>
    <string name="drawer_title_git_hub">GitHub</string>
    <string name="drawer_title_instagram">Instagram</string>
    <string name="drawer_title_setting">설정</string>
    <string name="drawer_title_before_client_data">지난 순번 정보</string>
    <!-- Fontello icons -->
    <string name="fontello_logo">&#xe802;</string>
    <string name="fontello_search">&#xe816;</string>
    <string name="fontello_x_mark">&#xe81f;</string>
    <string name="fontello_x_mark_masked">&#xe806;</string>
    <string name="fontello_microfon">&#xe80f;</string>
    <string name="fontello_user">&#xe81b;</string>
    <string name="fontello_password">&#xe823;</string>
    <string name="fontello_upload">&#xe81a;</string>
    <string name="fontello_play">&#xe813;</string>
    <string name="fontello_heart_empty">&#xe80b;</string>
    <string name="fontello_heart_full">&#xe80a;</string>
    <string name="fontello_drag_and_drop">&#xe821;</string>
    
    <!-- Content description strings -->
    <string name="cd_background_image">background image</string>
    <string name="cd_main_image">main image</string>
    
    <!-- TextView related strings -->
    <string name="typography1">Typography I</string>
    <string name="typography2">Typography II</string>
    <string name="typography3">Typography III</string>
    <string name="material_design">Material design</string>
    <string name="material_design_variation">Material design variation</string>
    <string name="all_set_by_google_instructions_of_material_design">All set by Google instructions of Material Design</string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="lorem_ipsum_short">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="thiner_and_lighter_version">Thiner and lighter version of Material design</string>
    <string name="thicker_and_darker_version">Thicker and darker version of Material design</string>
    
    <string name="number_of_images">%d image(s)</string>
    
    <string name="username">사용자아이디</string>
    <string name="password">비밀번호</string>
    <string name="welcome">Welcome!\nTouch Me!</string>


    <string name="undo_deletion">UNDO DELETION</string>
    <string name="download">DOWNLOAD</string>
    <string name="done">DONE</string>
    <string name="error">ERROR</string>
    <string name="login">로그인</string>
    <string name="register">회원가입</string>
    <string name="skip">SKIP</string>
    <string name="raised">RAISED</string>
    <string name="flat">FLAT</string>
    <string name="title_activity_store_management">StoreManagementActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Added by jun's-->

    <string name="actionbar_name_store_management_activity">매장관리</string>
    <string name="title_activity_sign_up">고객대기시스템 회원가입 </string>
    <string name="phonenumber">전화번호</string>
    <string name="title_activity_sign_up_activity_first">회원가입</string>
    <string name="title_activity_sign_up_activity_second">회원가입</string>
    <string name="title_activity_sign_up_activity_third">회원가입</string>

    <!-- Sign up Activity 공통 -->
    <string name="next_button">다음</string>
    <string name="back_button">이전</string>


    <!-- Sign up Activity First -->
    <string name="agreement_use">이용약관</string>
    <string name="agreement_personal_information_use">개인정보이용동의</string>
    <string name="agreement_use_check">동의합니다</string>
    <string name="agreement_personal_information_use_check">동의합니다</string>
    <string name="title_activity_signup_activity_page1">SignupActivity_page1</string>
    <string name="title_activity_signup_activity_page2">SignupActivity_page2</string>


    <!-- Sign up Activity second -->
    <string name="prompt_email">이메일</string>
    <string name="prompt_password">비밀번호</string>
    <string name="prompt_password_confirm">비밀번호확인</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_find_id">Find id /</string>
    <string name="action_find_password">Find password /</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_password_save">Save password</string>
    <string name="error_invalid_email">이메일 형태가 아닙니다</string>
    <string name="error_invalid_password_check">비밀번호와 일치하지 않습니다</string>
    <string name="error_not_same_email">일치하는 회원정보가 없습니다.</string>

    <string name="error_not_same_password">비밀번호가 일치하지 않습니다.</string>

    <string name="error_invalid_password_check_test">비밀번호와 일치</string>
    <string name="error_invalid_password">비밀번호가 너무 짧습니다</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">이 칸을 채워주세요</string>
    <string name="cellphone_certification">인증받을 전화번호</string>
    <string name="phone_certification_page_ment">핸드폰 인증과정입니다. 문자를 받을수 있는 전화번호를 입력해 주세요</string>
    <string name="the_last_word">회원가입 절차가 완료되었습니다. 저희의 회원이 되신것을 환영합니다. 다음으로 넘어가셔서 로그인하시기 바랍니다.</string>
    <string name="cellphone_number">전화번호를 입력해주세요</string>
    <string name="certification_number">인증번호</string>
    <string name="enter_certification_number">인증번호</string>
    <string name="under_the_email">이메일 주소로는 계정을 확인하기 위한 메일이 갈것입니다. 정확한 이메일을 입력해 주세요. 발송되는 이메일에는 계정을 활성화 시키는 코드가 들어있습니다.</string>
    <string name="send_button">보내기</string>
    <string name="check_button">확인</string>

    <!-- Sign up Activity third -->
    <string name="button_certification">인증하기</string>
    <string name="button_certification_success">인증성공</string>

    <!-- URL String  -->
    <string name="server_api_email_request">http://somabell01.cloudapp.net:8080/store/auth/email_request?</string>
    <string name="server_api_user_cancle">http://somabell01.cloudapp.net:8080/store/store/cancle?</string>
    <string name="server_api_user_call">http://somabell01.cloudapp.net:8080/store/store/pop?</string>
    <string name="server_api_put_url">http://somabell01.cloudapp.net:8080/store/store/put?</string>
    <string name="server_api_get_url">http://somabell01.cloudapp.net:8080/store/store/get?</string>
    <string name="Server_URL">http://somabell01.cloudapp.net:8080/</string>
    <string name="sign_up_sms_check_url">http://somabell01.cloudapp.net:8080/store/auth/sms_request?mdn=</string>
    <string name="sign_up_email">http://somabell01.cloudapp.net:8080/store/auth/email_request?email=</string>
    <string name="sign_up_sms_check">http://somabell01.cloudapp.net:8080/store/auth/sms_check?token=</string>
    <string name="title_activity_sign_up_activity_forth">SignUpActivityForth</string>

    <string name="api_server">http://tongs.kr/api/</string>
    <string name="api_store_login">store/auth/login/?</string>
    <string name="api_store_ticket_list">store/ticket/list/?</string>
    <string name="api_store_ticket_pop">store/ticket/pop/?</string>
    <string name="api_store_ticket_push">store/ticket/push/?</string>
    <string name="api_store_ticket_remove">store/ticket/remove/?</string>

    <!--email=somabell15@gmail.com&password=soma2015-->

    <!-- ClientManagementActivity  -->

    <string name="client_call">고객 호출</string>
    <string name="client_add">고객 등록</string>

    <string name="case_status_user_call">고객을 호출하겠습니까?</string>
    <string name="case_status_user_cancle">고객을 대기열에서 삭제하겠습니까?</string>

    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">JSON Parser Demo</string>
    <string name="str_iv_flag">Flag</string>


    <!-- Dialog Ment -->
    <string name="dialog_login">로그인중입니다. 잠시만 기다려 주세요.</string>
    <string name="dialog_user_call">고객을 호출을 하시겠습니까?</string>
    <string name="dialog_user_remove">고객을 삭제 하시겠습니까?</string>
    <string name="dialog_user_more_information">고객의 상세정보를 보시겠습니까?</string>

    <!-- Toast Ment -->
    <string name="toast_login_server_fail">로그인 서버가 응답하지 않습니다.</string>
    <string name="toast_login_account_fail">회원정보가 존재하지 않습니다.</string>

    <!--Activity Title -->

    <string name="title_activity_login">로그인</string>
    <string name="title_activity_client_management">매장 대기 정보</string>
    <string name="title_activity_client_more_information">ClientMoreInformation</string>

    <!--Tabbar Title -->
    <string name="title_section1">고객대기자리스트</string>
    <string name="title_section2">지난순번정보</string>
    <string name="title_section3">지난순번정보</string>
    <string name="title_section4">others</string>
    <string name="title_activity_previous_sequence_information">PreviousSequenceInformation</string>

</resources>
