<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tongs.hostapp.LoginActivity">

    <TextView

        android:text="@string/agreement_use" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textStyle="bold"

        />
    <TextView
        android:id="@+id/agreement_use"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp"

        />
    <CheckBox
        android:id="@+id/agreement_use_check"
        android:text="@string/agreement_use_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"/>
    <TextView

        android:text="@string/agreement_personal_information_use" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textStyle="bold"

        />
    <TextView
        android:id="@+id/agreement_personal_information_use"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        />
    <CheckBox
        android:id="@+id/agreement_personal_information_use_check"
        android:layout_width="wrap_content"
        android:text="@string/agreement_personal_information_use_check"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/sign_up_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_button"
            android:layout_marginRight="20dp"/>

        <Button
            android:id="@+id/sign_up_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_button"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/signup_progressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height ="wrap_content"
        android:max="100"
        android:progress="33"
        android:layout_gravity="bottom"
        />


</LinearLayout>
