<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"

    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tongs.hostapp.LoginActivity">


    <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/prompt_email"
        android:inputType="textEmailAddress" android:maxLines="1"
        android:singleLine="true"
        android:layout_weight="1"
        />

    <EditText android:id="@+id/password" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/prompt_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified" android:inputType="textPassword"
        android:maxLines="1" android:singleLine="true"
        android:layout_weight="1"
        />

    <TextView
        android:text="@string/cellphone_certification" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:textStyle="bold"
        android:layout_weight="1"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/phonenumber" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:hint="@string/cellphone_number"
            android:maxLines="1" android:singleLine="true"
            android:layout_weight="1"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Send"/>
    </LinearLayout>
    <TextView
        android:text="@string/certification_number" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:textStyle="bold"
        android:layout_weight="1"
        />
    <EditText
        android:id="@+id/cellphonenumber" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/enter_certification_number"
        android:maxLines="1" android:singleLine="true"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="32dp">

        <Button
            android:id="@+id/sign_up_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BACK"
            android:layout_marginRight="20dp"/>

        <Button
            android:id="@+id/sign_up_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="NEXT"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/signup_progressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height ="wrap_content"
        android:max="100"
        android:progress="50"

        />
</LinearLayout>
