<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.csform.android.uiapptemplate"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="24dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <!--android:background="@drawable/login_background_light"-->

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:layout_marginBottom="30.5dp"
        android:id="@+id/login_image_view"/>


    <com.csform.android.uiapptemplate.view.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:fletFloatingHint="@string/username"
        app:fletHintTextColor="@color/main_color_grey_900"
        app:fletSingleLine="true"
        app:fletTextBackground="@drawable/edit_text_background_accent"
        app:fletTextColor="@color/text_grey"
        android:id= "@+id/login_email"/>

    <com.csform.android.uiapptemplate.view.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="47.5dp"
        app:fletFloatingHint="@string/password"
        app:fletHintTextColor="@color/main_color_500"
        app:fletPassword="true"
        app:fletSingleLine="true"
        app:fletTextBackground="@drawable/edit_text_background_accent"
        app:fletTextColor="@color/main_color_grey_400"
        android:id ="@+id/login_password" />

    <com.csform.android.uiapptemplate.view.MaterialRippleLayout
        style="@style/RippleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="3dp"
        app:rippleColor="@color/main_color_grey_400"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/login"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="30px"
            android:layout_width="290dp"
            android:layout_height="40dp"
            android:background="@drawable/login_button"
            />
    </com.csform.android.uiapptemplate.view.MaterialRippleLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >
        <CheckBox
            android:id="@+id/login_keep_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="로그인유지"/>
    </LinearLayout>
<!--
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp" >

        <com.csform.android.uiapptemplate.view.MaterialRippleLayout
            style="@style/RippleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            app:rippleColor="@color/main_color_grey_400" >

            <com.csform.android.uiapptemplate.font.RobotoTextView
                android:id="@+id/login"
                style="@style/ButtonStyle.RaisedEmpty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:background="@color/Gold"
                android:minWidth="112dp"
                android:text="@string/login"
                android:textColor="#fff" />
        </com.csform.android.uiapptemplate.view.MaterialRippleLayout>

        <com.csform.android.uiapptemplate.view.MaterialRippleLayout
            style="@style/RippleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            app:rippleColor="@color/main_color_grey_400" >

            <com.csform.android.uiapptemplate.font.RobotoTextView
                android:id="@+id/register"
                style="@style/ButtonStyle.RaisedEmpty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:background="@color/Gold"
                android:minWidth="112dp"
                android:text="@string/register"
                android:textColor="#fff" />
        </com.csform.android.uiapptemplate.view.MaterialRippleLayout>
    </LinearLayout>
-->
    <!--
    <com.csform.android.uiapptemplate.view.MaterialRippleLayout
        style="@style/RippleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        app:rippleColor="@color/main_color_grey_400" >

        <com.csform.android.uiapptemplate.font.RobotoTextView
            android:id="@+id/skip"
            style="@style/ButtonStyle.RaisedEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="0dp"
            android:background="@android:color/transparent"
            android:minWidth="112dp"
            android:text="@string/skip"
            android:textColor="@color/main_color_grey_700" />
    </com.csform.android.uiapptemplate.view.MaterialRippleLayout>
    -->

    <TextView
        android:layout_gravity="bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="아이디 / 비밀번호를 잊으셨나요?"
        android:layout_marginTop="30dp"
        android:textSize="18.5px"/>

</LinearLayout>